# mnist

./: Jenkinsfile  MNISTConfig.cmake  README.md  README.rst
example/: CMakeLists.txt  main.cpp
include/mnist/: mnist_reader.hpp  mnist_reader_common.hpp  mnist_reader_less.hpp  mnist_utils.hpp
